--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ span.password-errors {
   cursor: pointer;
 }
 
-@media screen and (max-width: 740px) {
+@media screen and (max-width: 700px) {
   body {
     background: url("/images/bg-intro-mobile.png");
     background-color: var(--red);
@@ -174,12 +174,13 @@ span.password-errors {
   h1 {
     font-size: 2rem;
     text-align: center;
-    margin-top: 200px;
+    margin-top: 280px;
     line-height: 1.3;
   }
 
   p {
     text-align: center;
+    font-size: 17px;
   }
 
   h4 {
