--- a/styles.css
+++ b/styles.css
@@ -162,7 +162,7 @@ span.password-errors {
 
 @media screen and (max-width: 700px) {
   body {
-    background: url("/images/bg-intro-mobile.png");
+    background: url("./images/bg-intro-mobile.png") no-repeat center;
     background-color: var(--red);
     background-size: cover;
   }
@@ -174,7 +174,7 @@ span.password-errors {
   h1 {
     font-size: 2rem;
     text-align: center;
-    margin-top: 280px;
+    margin-top: 320px;
     line-height: 1.3;
   }
 
