--- a/styles.css
+++ b/styles.css
@@ -161,8 +161,9 @@ span.password-errors {
   cursor: pointer;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 600px) {
   body {
+    width: 600px;
     background: url("./images/bg-intro-mobile.png") no-repeat center;
     background-color: var(--red);
     background-size: cover;
@@ -173,22 +174,23 @@ span.password-errors {
   }
 
   h1 {
-    font-size: 2rem;
+    font-size: 3rem;
     text-align: center;
     margin-top: 320px;
+    /* margin-right: 62px; */
     line-height: 1.3;
   }
 
   p {
     text-align: center;
-    font-size: 17px;
-    width: 96%;
+    font-size: 24px;
+    /* width: 90%; */
   }
 
   h4 {
-    padding: 1.5rem 4rem;
+    padding: 2rem 5rem;
     border-radius: 0.6rem;
-    font-size: 18px;
+    font-size: 24px;
     line-height: 1.6;
     box-shadow: 0 6px 3px rgba(0, 0, 0, 0.35);
     width: 100%;
@@ -203,7 +205,8 @@ span.password-errors {
     display: inline-block;
     text-align: center;
     line-height: 1.8;
-    width: 95%;
+    width: 93%;
+    font-size: 17px;
   }
 
   form {
