--- a/styles.css
+++ b/styles.css
@@ -161,22 +161,25 @@ span.password-errors {
   cursor: pointer;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   body {
-    max-width: 600px;
-    background: url("./images/bg-intro-mobile.png") no-repeat center;
+    /* width: 600px; */
+    background: url("./images/bg-intro-mobile.png");
     background-color: var(--red);
     background-size: cover;
   }
 
   .container {
+    width: 600px;
     flex-direction: column;
+    gap: 5rem;
   }
 
   h1 {
     font-size: 3rem;
     text-align: center;
-    margin-top: 600px;
+    margin-top: 38rem;
+    margin-bottom: 2rem;
     /* margin-right: 62px; */
     line-height: 1.3;
   }
@@ -184,6 +187,7 @@ span.password-errors {
   p {
     text-align: center;
     font-size: 24px;
+    line-height: 1.5;
     /* width: 90%; */
   }
 
@@ -205,8 +209,9 @@ span.password-errors {
     display: inline-block;
     text-align: center;
     line-height: 1.8;
-    width: 93%;
-    font-size: 17px;
+    width: 90%;
+    font-size: 15px;
+    padding-left: 46px;
   }
 
   form {
