--- a/styles.css
+++ b/styles.css
@@ -161,26 +161,24 @@ span.password-errors {
   cursor: pointer;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 600px) {
   body {
-    /* width: 600px; */
     background: url("./images/bg-intro-mobile.png");
     background-color: var(--red);
     background-size: cover;
   }
 
   .container {
-    width: 600px;
     flex-direction: column;
+    margin: auto;
     gap: 5rem;
   }
 
   h1 {
     font-size: 3rem;
     text-align: center;
-    margin-top: 38rem;
+    margin-top: 9rem;
     margin-bottom: 2rem;
-    /* margin-right: 62px; */
     line-height: 1.3;
   }
 
@@ -188,7 +186,6 @@ span.password-errors {
     text-align: center;
     font-size: 24px;
     line-height: 1.5;
-    /* width: 90%; */
   }
 
   h4 {
@@ -217,5 +214,44 @@ span.password-errors {
   form {
     margin-bottom: 60px;
     box-shadow: 0 6px 3px rgba(0, 0, 0, 0.35);
+  }
+}
+
+@media screen and (max-width: 375px) {
+  body {
+    background: url("./images/bg-intro-mobile.png");
+    background-color: var(--red);
+    background-size: cover;
+  }
+
+  .container {
+    flex-direction: column;
+    margin: auto;
+    gap: 3rem;
+  }
+
+  h1 {
+    font-size: 2rem;
+    margin-top: 5rem;
+  }
+
+  p {
+    font-size: 15px;
+  }
+
+  h4 {
+    padding: 1rem 4rem;
+    font-size: 12px;
+  }
+
+  button {
+    border-radius: 0.35rem;
+    font-size: 1.1rem;
+  }
+
+  small {
+    width: 95%;
+    font-size: 10px;
+    padding-left: 12px;
   }
 }
